--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cordova-plugin-inappbrowser",
+  "name": "cordova-plugin-localtunnel",
   "version": "2.0.3-dev",
-  "description": "Cordova InAppBrowser Plugin",
+  "description": "Cordova LocalTunnel Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
-    "id": "cordova-plugin-inappbrowser",
+    "id": "cordova-plugin-localtunnel",
     "platforms": [
       "android",
       "browser",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apache/cordova-plugin-inappbrowser"
+    "url": "https://github.com/propelinc/cordova-plugin-inappbrowser"
   },
   "bugs": {
     "url": "https://issues.apache.org/jira/browse/CB"
